2010-09-01  Roland Levillain  <roland@lrde.epita.fr>

	Add more documentation on the detach procedure.

	* mln/make/detachment.hh: Here.
	Typo.
	* mln/topo/detach.hh: Typo.

2010-07-28  Roland Levillain  <roland@lrde.epita.fr>

	Regen Milena's Makefile helpers.

	* headers.mk, tests/unit_test/unit-tests.mk: Here.

2010-07-28  Roland Levillain  <roland@lrde.epita.fr>

	Add a VTK output for images of unsigned integers.

	* mln/io/vtk/save.hh
	(io::vtk::save(const unsigned_2complex_image3df&, const std::string&)):
	New function.
	(io::vtk::internal::unsigned_vtk_saver): New structure.
	* tests/io/vtk/save.cc: Add a tests case for images of unsigneds.
	* tests/io/vtk/Makefile.am (MOSTLYCLEANFILES):
	Add save-tetrahedron-unsigned.vtk.

2010-07-28  Roland Levillain  <roland@lrde.epita.fr>

	* mln/io/vtk/save.hh: Fix documentation.

2010-07-27  Roland Levillain  <roland@lrde.epita.fr>

	* mln/io/vtk/all.hh: New.

2010-06-24  Roland Levillain  <roland@lrde.epita.fr>

	Add a specific (temporary) VTK output routine for binary mesh images.

	* apps/mesh-segm-skel/save_bin_alt.hh
	(mln::io::vtk::save_bin_alt): New function.

2010-06-24  Roland Levillain  <roland@lrde.epita.fr>

	Exercise mln::io::vtk::save.

	* tests/io/vtk/save.cc: New.
	* tests/io/vtk/Makefile.am: New.
	* tests/io/Makefile.am (SUBDIRS): Add vtk.

2010-06-24  Roland Levillain  <roland@lrde.epita.fr>

	Start a VTK output for complex-based images.

	* mln/io/vtk/save.hh: New.

2010-08-18  Roland Levillain  <roland@lrde.epita.fr>

	* mln/topo/skeleton/breadth_first_thinning.hh: Reindent.

2010-08-18  Roland Levillain  <roland@lrde.epita.fr>

	Fix two errors in mln::topo::skeleton::breadth_first_thinning.

	* mln/topo/skeleton/breadth_first_thinning.hh: Remove a stray
	semicolon at the end of a `for' statement.
	Create psite using the right iterator.

2010-07-28  Roland Levillain  <roland@lrde.epita.fr>

	Disable the last test case in test-mesh-complex-pinv-curv-skel.
